@@ -1,3 +1,7 @@
+* Mon May 17 2012 Dan Prince <dprince@redhat.com> - 1.0.12
+  - Ordering fix to ensure job types are displayed in Gerrit comments 
+    in the same order they are listed in the config file.
+
 * Mon May 7 2012 Dan Prince <dprince@redhat.com> - 1.0.11
   - The comment task now uses Gerrit 'verified' to report results.
     It votes with -1 and +1 based on SmokeStack results.
